implemented delete task handler.
