# rest-api/docs/swagger.yaml
@@ -87,6 +87,22 @@ paths:
           description: Internal Server Error
       summary: Create Task
   /api/v1/tasks/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Deletes the task with given id
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
+      summary: Delete Task
     get:
       consumes:
       - application/json
